...
      }
    },
    "Accept": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Archive Error": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Chat": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Disconnect": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Done": {
      "extractionState": "manual",
      "localizations": {
...
      "isCommentAutoGenerated": true
    },
    "Enable Notifications": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Export Archive": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "File Transfer": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Go offline": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Go online": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Import Archive": {
      "extractionState": "manual",
      "localizations": {
...
      "isCommentAutoGenerated": true
    },
    "Library": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Manual Connect": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Message": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Nearby": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "PeerDrop": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Profile": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Quick Connect": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Send": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Send File": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Voice Call": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Voice Calls": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "You are offline": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Close": {
      "localizations": {
        "ja": {
...
